feat: agregar DTOs, servicios y modificaciones para la cotización de propuestas anuales en cobranza